--- a/docs/style.css
+++ b/docs/style.css
@@ -4,6 +4,7 @@ body {
   margin: 2em auto;
   padding: 0 1em;
   line-height: 1.6;
+  background-color: #d5d7e0;
 }
 h1 { color: #374785; }
 code { background: #eee; padding: 2px 4px; border-radius: 4px; }
